# site

./: .prettierignore  CNAME  Cargo.toml  README.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: ci.yml  deploy.yaml
assets/: blog.css  colors.css  main.css
content/: about.md
content/posts/: another-post.md  hello-world.md  test-post.md
src/: about.rs  blog.rs  main.rs  post.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/(container)/: layout.tsx  page.tsx
src/app/(container)/_components/: community.tsx  foundation.tsx  hero.tsx  projects.tsx
src/app/(container)/about/: page.tsx
src/app/_components/: hero.tsx  projects.tsx  teaser.tsx  waterfall-separator.tsx
src/app/about/: page.tsx
src/app/about/_components/: about-separator.tsx
src/app/about/_componets/: about-seperator.tsx
src/app/playground/: layout.tsx  page.tsx
src/app/playground/[slug]/: page.tsx
src/app/playground/_components/: navbar.tsx  project-header.tsx
src/app/playground/arbiter/: page.tsx
src/app/playground/cova/: page.tsx
src/app/team/: page.tsx
src/components/: footer.tsx  header.tsx  icons.tsx  theme-toggle.tsx
src/config/: site.ts
src/data/: index.ts  projects.ts  team.ts  values.ts
src/hooks/: useArbiter.tsx  useCova.tsx
src/playground-wasm/arbiter/: leader.d.ts  leader.js  leader_bg.wasm  leader_bg.wasm.d.ts  package.json
src/playground-wasm/cova/: README.md  package.json  vietoris_web_demo.d.ts  vietoris_web_demo.js  vietoris_web_demo_bg.wasm  vietoris_web_demo_bg.wasm.d.ts
(+1 files in other folders)
