[package]
authors = ["Colin Roberts <colin@autoparallel.xyz>"]
edition = "2021"
name    = "site"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus         = { version = "0.6.0", features = ["router"] }
glob           = "0.3"
include_dir    = "0.7"
pulldown-cmark = "0.9"
serde          = { version = "1.0", features = ["derive"] }
serde_yaml     = "0.9"

[features]
default = ["web"]
desktop = ["dioxus/desktop"]
mobile  = ["dioxus/mobile"]
web     = ["dioxus/web"]

[profile]

[profile.wasm-dev]
inherits  = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
